/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package Classes;

/**
 *
 * @author Universidade
 */
public class Task {
    
    private String id;
    private String description;
    private int durationInHours;
    private double costPerHourOfJuniorEur;
    private String category;
}
