@startuml MD

skinparam classAttributeIconSize 0
hide methods
left to right direction

class App {

}

class Organization {
        - String name
        - String NIF
}

class Transaction {

}

class Task {
        - String id
        - String description
        - Integer durationInHours
        - Double costPerHourOfJuniorEur
        - String category
}

class HistoricalTransactionFile {

}


class Collaborator {
        - String name
        - String email
        - String password
}

class Freelancer {
        - String id
        - String name
        - String levelOfExpertise
        - String email
        - String NIF
        - String bankAccountIBAN
        - String address
        - String country
}

Organization                 "1" -- "1"      Collaborator              : has >
Organization                 "1" -- "*"      Task                      : publishes >
Organization                 "1" -- "*"      Transaction               : has >
App                          "1" -- "*"      Organization              : has >
App                          "1" -- "*"      Freelancer                : has >
Collaborator                 "1" -- "*"      HistoricalTransactionFile : loads >
HistoricalTransactionFile    "1" -- "*"      Transaction               : records >

@enduml